--- a/data_merge.ipynb
+++ b/data_merge.ipynb
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,6 +597,26 @@
     "    # Add more codes and countries as needed\n",
     "}\n",
     "# Using the dictionary above to replace the country code with the country name in the LOCATION column for reach dataframe.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(country_code_to_name)"
    ]
   },
   {
